@@ -1,8 +1,10 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.24 2005/01/07 05:23:19 codeman Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.25 2005/01/07 07:00:13 agaffney Exp $
 
 *GLI-0.01 (9 Feb 2004)
+
+  07 Jan 2005; Initial move of partitioning code from ArchTemplate to x86Template.
 
   07 Jan 2005; Preston Cody <codeman@gentoo.org>
   Fixed a few more edit_configs.  fixed a chroot multicommand bug thanks to agaffney.
